--- a/_posts/2019-04-22-SmartKey.md
+++ b/_posts/2019-04-22-SmartKey.md
@@ -7,7 +7,7 @@ author:     "Vove"
 header-img: "img/title-bg/post-bg-18-8-25.jpg"
 tags:
     - kotlin
-    - reflection
+    - SmartKey
 ---
 
 [![](https://jitpack.io/v/Vove7/SmartKey.svg)](https://jitpack.io/#Vove7/SmartKey)  [![](https://img.shields.io/badge/Github-grey.svg?style=flat)](https://github.com/Vove7/SmartKey)
