--- a/_posts/2019-04-22-SmartKey.md
+++ b/_posts/2019-04-22-SmartKey.md
@@ -31,6 +31,8 @@ SmartKet.init(context)
 1. 定义配置类：
 
 ```kotlin
+//这里可以注解配置存储文件名，多个配置类可分文件存储
+@Config("app_config")
 object AppConfig {
 
     /**
@@ -94,14 +96,24 @@ AppConfig.userInfo = UserInfo("new_user")
 - 使用`SmartKey`直接操作 key 和 value
 
 ```kotlin
-SmartKey.set("text", "aaa")
-SmartKey.get("number", -1)
+//使用默认存储文件存取
+SmartKey["text"] = "aaa" 
+val n = SmartKey["number", -1] //key, defaultValue
+
+//指定配置文件存取
+SmartKey["app2", "key"] = 1
+val s = SmartKey["app2", "text", "default"]//configName, key, defaultValue
+
+//另外，key可使用StringRes 来代替 
+val t = SmartKey[R.string.key_of_text, "default"]
+
 
 ```
 
+
 ### 引入 SmartKey
 
-参见 [![](https://img.shields.io/badge/Github-grey.svg?style=flat)](https://github.com/Vove7/SmartKey)
+参见 [![](https://img.shields.io/badge/Github-grey.svg?style=flat)](https://github.com/Vove7/SmartKey#%E5%BC%95%E5%85%A5smartkey)
 
 
 ### Thanks
